<resources>
    <string name="app_name">आर्य वीर दल </string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="anime_title">Anime Title</string>
    <string name="category">Category</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="notification">Notification</string>
    <string name="lathi_sastracharya_1yr">लाठी शस्त्राचार्य प्रथम वर्ष</string>
    <string name="lathi_sastracharya_2yr">लाठी शस्त्राचार्य द्वितीय वर्ष </string>
    <string name="parichaya">परिचय</string>
    <string name="pathyakaram">पाठ्यक्रम</string>
    <string name="mantra">मंत्र:</string>
    <string name="aaryaveerdal">आर्य वीर दल</string>
    <string name="vyayamsangeet">व्यायाम संगीत</string>
    <string name="dastavez">दस्तावेज़</string>
    <string name="aryaveerdal">आर्य वीर दल</string>
    <string name="sthapna">स्थापना</string>
    <string name="samajmeyogdan">समाज में योगदान</string>
    <string name="uddesya">उद्देश्य</string>
    <string name="aryaveerdalhikyo">आर्य वीर दल ही क्यों</string>
    <string name="aaryaveerangnadal">आर्य वीरांगना दल </string>
    <string name="aboutme">हमारे बारे में</string>
    <string name="sangeet">संगीत</string>
    <string name="vyayamacharya">व्यायामाचार्य</string>
    <string name="sastracharya">शस्त्राचार्य</string>
    <string name="astracharya">अस्त्राचार्य</string>
    <string name="nyudhammacharya">नियुध्दमाचार्य</string>
    <string name="yogacharya">योगाचार्य</string>
    <string name="ghos">घोष</string>
    <string name="scouting">स्काउटींग</string>
    <string name="boudhikacharya">बौद्धिकाचार्य</string>
    <string name="home">होम</string>
    <string name="exit">Exit</string>
    <string name="lathi">लाठी</string>
    <string name="parshu">परशु</string>
    <string name="bhala">भाला</string>
    <string name="nanchaku">नानचाकू</string>
    <string name="talvaar">तलवार</string>
    <string name="yavara">यावारा</string>
    <string name="chakujambiya">चाकू जंबिया</string>
    <string name="daanpatta"> पट्टा</string>
    <string name="maandu">मांडू</string>
    <string name="bagnakha">बगनखा</string>
    <string name="gadka">गदका</string>
    <string name="gada">गदा</string>
    <string name="sarvangsundram">सर्वांग सुंदर व्यायाम</string>
    <string name="suryanamaskar">सूर्य नमस्कार</string>
    <string name="bhoominamaskar">भूमि नमस्कार</string>
    <string name="chandranamaskar">चंद्र नमस्कार</string>
    <string name="dandbaithak">दंड बैठक</string>
    <string name="aerobic">एरोबिक्स व्यायाम</string>
    <string name="dumble">डंबल</string>
    <string name="hindilegium">हिंदी लेजियम</string>
    <string name="legium"> लेजियम</string>
    <string name="ghatilegium">घाटी लेजियम</string>
    <string name="indianclub">इंडियन क्लब</string>
    <string name="vendss">वेन्डस</string>
    <string name="ring">रिंग</string>
    <string name="gimnastic">जिम्नास्टिक</string>
    <string name="vyayam">व्यायाम</string>
    <string name="khel">खेल</string>
    <string name="sainikshiksha">सैनिक शिक्षा</string>
    <string name="dhabukayad">बांबु कवायद</string>
    <string name="khadilegium">खड़ी लेजियम</string>
    <string name="malkhamb">मल्लखम्भ</string>
    <string name="dorimalkhamb">डोरी मलखंब</string>
    <string name="ghumgru_kathi">घुंघरू काठी</string>
    <string name="mudgar_mungri">मुद्गल (मोंगरी)</string>
    <string name="jhandi_pt">झंडी पीटी</string>

    <string name="jhandi_drill">झंडी ड्रिल</string>
    <string name="torch_drill">टॉर्च ड्रिल</string>
    <string name="dhanush">धनुष</string>
    <string name="gofar">गोफड़</string>
    <string name="gun">गन</string>
    <string name="karate">कराटे</string>
    <string name="kalri">कलरी</string>
    <string name="kata">काता</string>
    <string name="chakuse_bachau">चाकू से बचाव</string>
    <string name="self_defence">सेल्फ डिफेंस</string>
    <string name="kick_defence">किक सुरक्षा</string>
    <string name="counter_attack">काउंटर अटैक</string>
    <string name="hatiyaron_se_suraksha">हथियारों से सुरक्षा</string>
    <string name="muthi_pratyakraman">मुट्ठी प्रत्याक्रमण</string>
    <string name="yog_ek_parichaya">योग एक परिचय</string>
    <string name="dhayan">ध्यान</string>
    <string name="yog_ke_ang">योग के अंग</string>
    <string name="bandh">बंध</string>
    <string name="yoga">योग</string>
    <string name="samadhi">समाधि</string>
    <string name="aasan">आसन</string>
    <string name="sat_karma">सठ कर्म</string>
    <string name="pranayam">प्राणायाम</string>
    <string name="mudra">मुद्रा</string>
    <string name="pyramid">पिरामिड</string>
    <string name="aryaveerdal_geet">आर्य वीर दल गीत</string>
    <string name="kavita">कविता</string>
    <string name="arya_samaj">आर्य समाज</string>
    <string name="dayanand_song">स्वामी दयानंद </string>
    <string name="prabhu_bhakti">प्रभु भक्ति</string>
    <string name="nasa_unmoolan">नशा उन्मूलन</string>
    <string name="desh_bhakti">देश भक्ति</string>
    <string name="betiyan_narishaktikaran">नारी शक्ति करण</string>
    <string name="prerna_geet">प्रेरणा गीत</string>
    <string name="om_geet">ओउ्म भजन </string>
    <string name="vanshi_rachna">वंशी रचना बांसुरी</string>
    <string name="anak_rachna">आनक रचना साइड ड्रम</string>
    <string name="sankh_rachna">शंख रचना बिगुल</string>
    <string name="aadesh">आदेश</string>
    <string name="disha_gyan">दिशा ज्ञान</string>
    <string name="ganthe">गांठे</string>
    <string name="anuman_lagan">अनुमान लगाना</string>
    <string name="kansh">कांश</string>
    <string name="patti_bandhna">पट्टी बांधना</string>
    <string name="jakdan">जकड़न</string>
    <string name="ghayal_ko_pahuchana">घायल को पहुंचाना</string>
    <string name="prathimik_chikitsa">प्राथमिक चिकित्सा</string>
    <string name="camp_lagan">कैंप लगाना</string>
    <string name="fansh">फांस</string>
    <string name="mahapurush_jeevan">महापुरुषों के प्रेरक जीवन</string>
    <string name="arya_veerdal_boudhik">आर्य वीर दल बौद्धिक पाठ्यक्रम</string>
    <string name="swamiji_jeevani">स्वामी दयानंद जी की जीवनी</string>
    <string name="bhasan_satak">भाषण शतक बौद्धिक</string>
    <string name="parveesh_praroop">प्रवेश प्रारूप</string>
    <string name="prarahari_nirikshak">प्रहरी निरीक्षक</string>
    <string name="anksoochi">अंकसूची</string>
    <string name="varg_soochi">वर्ग सूची</string>
    <string name="boudhik_paper">बौद्धिक प्रश्न पत्र</string>
    <string name="pratah_kaalin_mantra">प्रातः कालीन मंत्र</string>
    <string name="sayan_mantra">शयन मंत्र</string>
    <string name="sandhya_mantra">संध्या के मंत्र</string>
    <string name="yag_ke_mantra">यज्ञ के मंत्र</string>
    <string name="bhoojan_mantra">भोजन के पूर्व मंत्र</string>
    <string name="bhoojan_ke_baad_mantra">भोजन के पश्चात मंत्र</string>
    <string name="kamati_ke_sadasya">कमेटी के सदस्य</string>
    <string name="vyayam_shikshak">व्यायाम शिक्षक</string>
    <string name="prantiya_mantri">प्रांतीय मंत्री</string>
    <string name="prantiya_vyayam_shiksk">प्रांतीय व्यायाम शिक्षक</string>
    <string name="vyayam_shikshika">व्यायाम शिक्षिका</string>
    <string name="prant_sanchalak">प्रांत संचालक</string>
    <string name="ninad_song">निनाद (नांदी पाठ)</string>
    <string name="swagatan_song">स्वागतम (भारतम)</string>
    <string name="nirikshan_song_slowmarch">निरीक्षण चाल (स्लो मार्च)</string>
    <string name="suryanamaskar_song">सूर्य नमस्कार - राग भैरव बैरागी</string>
    <string name="bhoominamaskar_music">भूमि नमस्कार - राग पीलू</string>
    <string name="chandranamaskar_music">चंद्र नमस्कार - राग आशावरी</string>
    <string name="pared">परेड</string>
    <string name="horahi_dharavikal">हो रही धरा विकल्प</string>
    <string name="raagbhupali">राग भूपाली</string>
    <string name="dwand">द्वंद</string>
    <string name="yogasan_music">योगासन - राग केदार</string>
    <string name="rastriya_prarthna">राष्ट्रीय प्रार्थना - आ ब्राह्मण ब्राह्मणो</string>
    <string name="dhawaj_gaan">ध्वज गान</string>
    <string name="commando">कमांडो</string>
    <string name="alha">आल्हा</string>
    <string name="dhol">ढोल</string>
    <string name="ladan">लडन</string>
    <string name="marching">मार्चिंग</string>
    <string name="choti_mongri">छोटी मोगरी(करेला)</string>
    <string name="badi_mongri">बड़ी मोगरी</string>
    <string name="torcg_drill">टॉर्च ड्रिल</string>
    <string name="trumpolib">ट्रामपॉलिन</string>
    <string name="fun_fire">फन फायर</string>
    <string name="matki">मटकी</string>
    <string name="kailis_thenix">कैलिसथेनिक्स</string>
    <string name="agriculture">एग्रीकल्चर</string>
    <string name="industry">इंडस्ट्री</string>
    <string name="free_play">फ्री प्ले</string>
    <string name="dhayanatamak">ध्यानात्मक ध्वनियां</string>
    <string name="slow_march">स्लो मार्च</string>
    <string name="raag_bhoopali">राग भूपाली</string>

    <string name="lezium">लेजियम</string>


    <string name="rastragaan">राष्ट्रगान</string>
    <string name="jyati_om">जयती ओम</string>
    <string name="contact_us">हमसे सम्पर्क करे</string>
    <string name="bahar_nikle">बाहर निकले</string>
    <string name="pratham_dutiya_varsh">प्रथम द्वितीय वर्ष</string>
    <string name="upvyayam_vyayamsikshak_sreni">उप व्यायाम और व्यायाम शिक्षक श्रेणी</string>
    <string name="hamse_sampark_karen">हमसे संपर्क करें</string>
    <string name="aryaveerdalvyayam_sangeet">आर्य वीर दल व्यायाम संगीत</string>
    <string name="chotimongri">छोटी मोंगरी (करेला)</string>
    <string name="ghunghrukathi">घुँघरू काठी</string>
    <string name="aryaveershreni">आर्य वीर श्रेणी</string>
    <string name="shakhanayak_shreni">शाखा नायक श्रेणी</string>
    <string name="up_vyayamshikshak_shreni">उप व्यायाम शिक्षक श्रेणी</string>
    <string name="pustakalaya">पुस्तकालय</string>


    <string name="shastra">शस्त्र</string>
    <string name="astra">अस्त्र</string>
    <string name="niyudham">नियुद्धम</string>
    <string name="yog">योग</string>
    <string name="sakhanayakshreni">शाखानायक श्रेणी</string>
    <string name="sastracharya_dutiyavarsh">शस्त्राचार्य द्वितीय वर्ष</string>
    <string name="sitara">सितारा</string>
    <string name="kolkapuri_paddhati">कोल्हापुरी पद्धति</string>
    <string name="aamrawati_paddhati">आम्रवती पद्धति</string>
    <string name="barodapaddhati">बड़ोदा पद्धति</string>
    <string name="gofan">गोफण</string>
    <string name="vitaa">वीटा</string>
    <string name="aatma_raksha_vigyan">आत्मा रक्षा विज्ञान</string>
    <string name="yam">यम</string>
    <string name="niyam">नियम</string>
    <string name="pratyahaar">प्रत्याहार</string>
    <string name="dhaarna">धारणा</string>
    <string name="shuddhi_kriya">शुद्धि क्रिया</string>
    <string name="aryaveerdalkipustaken">आर्य वीर दल की पुस्तकें</string>
    <string name="arya_samaj_ke_niyam">आर्य समाज के नियम</string>
    <string name="yazopavit_mantra">यज्ञोपवीत मन्त्र</string>
    <string name="dhwaj_gaan">ध्वज गान</string>
    <string name="aryaveerdal_videos">आर्य वीर दल वीडियोज़</string>
    <string name="aryaveerdal_social_link">आर्य वीर दल सोशल लिंक्स</string>
    <string name="rupendra_arya">रूपेन्द्र आर्य</string>
    <string name="social_media_commetie">सोशल मीडिया कमेटी</string>
    <string name="chakra">चक्र</string>
    <string name="musthi_pratya_karaman">मुष्टि प्रत्याक्रमण</string>
    <string name="suraksha_vyayam_shikshak">व्यायाम शिक्षक श्रेणी:-</string>
    <string name="suraksha_shakhanayak_shreni">शाखा नायक श्रेणी सुरक्षा:-</string>
    <string name="suraksha">सुरक्षा (ब्लाक) :-</string>
    <string name="padaghat">पदाघात</string>
</resources>
