<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".vyayamsangeet.Anya_vyayam_sangeet">

    <LinearLayout android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10.0dip">
    <RelativeLayout android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20.0dip"
        android:layout_marginTop="8.0dip"
        android:layout_marginRight="20.0dip">
    <TextView
        android:textSize="20.0sp"
        android:textColor="#060606"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:id="@+id/nationalid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=" आर्य वीर दल व्यायाम संगीत  " />
    </RelativeLayout>





    <androidx.cardview.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/card22"
        android:layout_width="fill_parent"
        android:layout_height="100.0dip"
        android:layout_marginTop="15.0dip">
        <RelativeLayout android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView android:textSize="20.0sp"
                android:layout_marginLeft="10dp"
                android:textStyle="bold"
                android:textColor="@color/cardview_dark_background"
                android:layout_gravity="start"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/alha"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:fontFamily="serif" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/card23"
        android:layout_width="fill_parent"
        android:layout_height="100.0dip"
        android:layout_marginTop="15.0dip">
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView android:textSize="20.0sp" android:textStyle="bold"
                android:layout_marginLeft="10dp"
                android:textColor="@color/cardview_dark_background"

                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/dhol"
                android:layout_centerVertical="true"
                android:fontFamily="serif" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/card24"
        android:layout_width="fill_parent"
        android:layout_height="100.0dip"
        android:layout_marginTop="15.0dip">
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:textSize="20.0sp"
                android:layout_marginLeft="10dp"
                android:textStyle="bold"
                android:textColor="@color/cardview_dark_background"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/ladan"
                android:layout_centerVertical="true"
                android:fontFamily="serif" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/card25"
        android:layout_width="fill_parent"
        android:layout_height="100.0dip"
        android:layout_marginTop="10dp">
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView android:textSize="20.0sp"
                android:layout_marginLeft="10dp"
                android:textStyle="bold"
                android:textColor="@color/cardview_dark_background"
                android:layout_gravity="start"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"

                android:text="@string/marching"
                android:layout_centerVertical="true"
                android:fontFamily="serif" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/carrd26"
        android:layout_width="fill_parent"
        android:layout_height="100.0dip"
        android:layout_marginTop="15.0dip">
        <RelativeLayout android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView android:textSize="20.0sp"
                android:layout_marginLeft="10dp"
                android:textStyle="bold"
                android:textColor="@color/cardview_dark_background"
                android:layout_gravity="start"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/choti_mongri"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:fontFamily="serif" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/card27"
        android:layout_width="fill_parent"
        android:layout_height="100.0dip"
        android:layout_marginTop="15.0dip">
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView android:textSize="20.0sp" android:textStyle="bold"
                android:layout_marginLeft="10dp"
                android:textColor="@color/cardview_dark_background"

                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/badi_mongri"
                android:layout_centerVertical="true"
                android:fontFamily="serif" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/card28"
        android:layout_width="fill_parent"
        android:layout_height="100.0dip"
        android:layout_marginTop="15.0dip">
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:textSize="20.0sp"
                android:layout_marginLeft="10dp"
                android:textStyle="bold"
                android:textColor="@color/cardview_dark_background"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/torcg_drill"
                android:layout_centerVertical="true"
                android:fontFamily="serif" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/card29"
        android:layout_width="fill_parent"
        android:layout_height="100.0dip"
        android:layout_marginTop="10dp">
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView android:textSize="20.0sp"
                android:layout_marginLeft="10dp"
                android:textStyle="bold"
                android:textColor="@color/cardview_dark_background"
                android:layout_gravity="start"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"

                android:text="@string/jhandi_drill"
                android:layout_centerVertical="true"
                android:fontFamily="serif" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/card30"
        android:layout_width="fill_parent"
        android:layout_height="100.0dip"
        android:layout_marginTop="15.0dip">
        <RelativeLayout android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView android:textSize="20.0sp"
                android:layout_marginLeft="10dp"
                android:textStyle="bold"
                android:textColor="@color/cardview_dark_background"
                android:layout_gravity="start"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/trumpolib"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:fontFamily="serif" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/card31"
        android:layout_width="fill_parent"
        android:layout_height="100.0dip"
        android:layout_marginTop="15.0dip">
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView android:textSize="20.0sp" android:textStyle="bold"
                android:layout_marginLeft="10dp"
                android:textColor="@color/cardview_dark_background"

                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/fun_fire"
                android:layout_centerVertical="true"
                android:fontFamily="serif" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/card32"
        android:layout_width="fill_parent"
        android:layout_height="100.0dip"
        android:layout_marginTop="15.0dip">
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:textSize="20.0sp"
                android:layout_marginLeft="10dp"
                android:textStyle="bold"
                android:textColor="@color/cardview_dark_background"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/matki"
                android:layout_centerVertical="true"
                android:fontFamily="serif" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/card33"
        android:layout_width="fill_parent"
        android:layout_height="100.0dip"
        android:layout_marginTop="15.0dip">
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:textSize="20.0sp"
                android:layout_marginLeft="10dp"
                android:textStyle="bold"
                android:textColor="@color/cardview_dark_background"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/kailis_thenix"
                android:layout_centerVertical="true"
                android:fontFamily="serif" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/card34"
        android:layout_width="fill_parent"
        android:layout_height="100.0dip"
        android:layout_marginTop="10dp">
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView android:textSize="20.0sp"
                android:layout_marginLeft="10dp"
                android:textStyle="bold"
                android:textColor="@color/cardview_dark_background"
                android:layout_gravity="start"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"

                android:text="@string/agriculture"
                android:layout_centerVertical="true"
                android:fontFamily="serif" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/card35"
        android:layout_width="fill_parent"
        android:layout_height="100.0dip"
        android:layout_marginTop="15.0dip">
        <RelativeLayout android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView android:textSize="20.0sp"
                android:layout_marginLeft="10dp"
                android:textStyle="bold"
                android:textColor="@color/cardview_dark_background"
                android:layout_gravity="start"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/industry"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:fontFamily="serif" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/card36"
        android:layout_width="fill_parent"
        android:layout_height="100.0dip"
        android:layout_marginTop="15.0dip">
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView android:textSize="20.0sp" android:textStyle="bold"
                android:layout_marginLeft="10dp"
                android:textColor="@color/cardview_dark_background"

                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/free_play"
                android:layout_centerVertical="true"
                android:fontFamily="serif" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/card37"
        android:layout_width="fill_parent"
        android:layout_height="100.0dip"
        android:layout_marginTop="15.0dip">
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:textSize="20.0sp"
                android:layout_marginLeft="10dp"
                android:textStyle="bold"
                android:textColor="@color/cardview_dark_background"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/dhayanatamak"
                android:layout_centerVertical="true"
                android:fontFamily="serif" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
    </LinearLayout>
</ScrollView>