<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".vyamacharya.Khel">

    <LinearLayout android:orientation="vertical"
        android:layout_width="fill_parent"
        android:background="@color/colorPrimaryDark"
        android:layout_height="wrap_content"
        android:layout_marginTop="10.0dip">
        <RelativeLayout android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20.0dip"
            android:layout_marginTop="8.0dip"
            android:layout_marginRight="20.0dip">

            <TextView
                android:id="@+id/indianclub"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_centerHorizontal="true"
                android:text="@string/khel"
                android:textColor="#ffff"
                android:textSize="20.0sp"
                android:textStyle="bold" />
        </RelativeLayout>
        <androidx.cardview.widget.CardView


            android:id="@+id/card1"
            android:layout_width="fill_parent"
            android:layout_height="50.0dip">
            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <TextView android:textSize="20.0sp"
                    android:textStyle="bold"
                    android:textColor="@color/cardview_dark_background"
                    android:layout_gravity="start"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15.0dip"
                    android:text="@string/aryaveershreni"
                    android:layout_centerVertical="true"
                    android:fontFamily="serif" />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView


            android:id="@+id/card2"
            android:layout_width="fill_parent"
            android:layout_height="50.0dip"
            android:layout_marginTop="15.0dip">
            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">


                <TextView android:textSize="20.0sp"
                    android:textStyle="bold"
                    android:textColor="@color/cardview_dark_background"
                    android:layout_gravity="start"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15.0dip"
                    android:text="@string/shakhanayak_shreni"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:fontFamily="serif" />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView

android:layout_marginBottom="15dp"
            android:id="@+id/card3"
            android:layout_width="fill_parent"
            android:layout_height="50.0dip"
            android:layout_marginTop="15.0dip">
            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <TextView android:textSize="20.0sp"
                    android:textStyle="bold"
                    android:textColor="@color/cardview_dark_background"
                    android:layout_gravity="start"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15.0dip"
                    android:text="@string/up_vyayamshikshak_shreni"
                    android:layout_centerVertical="true"
                    android:fontFamily="serif" />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>



    </LinearLayout>

</ScrollView>